--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,22 @@ a:link {
     color: azure;
     text-decoration: none;
 }
+
 a:visited {
     color: azure;
     text-decoration: none;
 }
+
 a:hover {
     color: azure;
     text-decoration: underline;
 }
+
 a:active {
     color: azure;
     text-decoration: none;
 }
+
 /*#endregion*/
 
 body {
@@ -24,14 +28,44 @@ body {
     margin: 5%;
 }
 
-h1 {
-    /* border: 3px solid green; */
-}
-
+/*#region nav*/
 nav {
     float: left;
     width: 20%;
 }
+
+nav>ul {
+    padding-left: 0;
+}
+
+nav>ul>li {
+    list-style: none;
+}
+
+nav>ul>li>details>summary {
+    list-style: none;
+    /* display: none; */
+    padding-left: 0;
+}
+
+nav>ul>li>details>summary:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+nav>ul>li>details>ul {
+    padding-left: 3%;
+}
+
+nav>ul>li>details>ul>li {
+    list-style: none;
+}
+
+nav details[open] summary {
+    color: cadetblue;
+}
+
+/*#endregion*/
 
 article {
     float: left;
